<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".view.SchoolDetailFragment">

        <TextView
            android:id="@+id/school_name"
            android:text="@string/school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/num_of_sat_test_takers"
            android:text="@string/number_of_sat_test_takers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sat_critical_reading_avg_score"
            android:text="@string/critical_reading_avg_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/sat_math_avg_score"
            android:text="@string/math_avg_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sat_writing_avg_score"
            android:text="@string/writing_avg_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>